...
            android:layout_marginRight="30dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/dishtype"
            android:layout_height="20dp"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/subItemView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:visibility="gone"
        android:orientation="horizontal">

...
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="0" />

            <ImageView
                android:id="@+id/plusItem"
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_add"/>
        </LinearLayout>
    </LinearLayout>
...
